--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@
     </div>
   </div>
 
-  <div class="controls">
-    <button id="start">🔎 Mulai Scan</button>
-    <button id="clear">Clear</button>
-    <span class="status" id="status">Status: idle</span>
-  </div>
+<div class="controls">
+  <button id="scan3">🔎 Scan 3-Hop</button>
+  <button id="scan4">🔎 Scan 4-Hop</button>
+  <button id="clear">Clear</button>
+  <span class="status" id="status">Status: idle</span>
+</div>
+
 
   <!-- Rute terbaik -->
   <div id="best-route"></div>
