--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <title>WPOL Arbitrage Scanner + Executor</title>
+  <title>WPOL Arbitrage Scanner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
